--- a/src/components/Skills/SkillsSection.css
+++ b/src/components/Skills/SkillsSection.css
@@ -1,83 +1,110 @@
-
-.skills-title{
-  color:var(--main-text-color);
-  margin-top:0em;
+.skills-title {
+  color: var(--main-text-color);
+  margin-top: 0em;
   font-weight: bolder;
   text-align: center;
   width: 50%;
   margin: 0 auto;
 }
 
-.skills-title:hover{
-  cursor:default;
+.skills-title:hover {
+  cursor: default;
 }
 
-.skill-header{
-  color:var(--accent-color-1);
+.skill-header {
+  color: var(--accent-color-1);
   padding-bottom: 1rem;
 }
 
-
-.skill-item{
-  color:var(--main-text-color);
+.skill-item {
+  color: var(--main-text-color);
 }
 
-.skills-window{
+.skills-window {
   backdrop-filter: blur(50px);
   border-radius: 0.5em;
   padding-bottom: 2rem;
-  margin-top:2em;
-  margin-bottom:1em;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  margin-left:auto;
+  margin-right:auto;
+  margin-top: 2em;
+  margin-bottom: 1em;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-@media(min-width: 992px){
-  .skills-window:hover{
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    transform:scale(1.005);
+@media (min-width: 992px) {
+  .skills-window:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    transform: scale(1.005);
   }
 }
 
-.skills-header:hover{
+@media (max-width: 480px) {
+  #skills-wrapper {
+    background: none;
+  }
+  .skills-title {
+    font-size: 1em;
+  }
+  .skill-header {
+    font-size: 1.2em;
+  }
+
+  .skill-item {
+    font-size: 0.7em;
+  }
+  .section-header{
+    font-size:2.25em;
+    padding-bottom:0;
+  }
+}
+
+@media (min-width: 481px) {
+  #skills-wrapper {
+    --x: 0px;
+    --y: 0px;
+    transition-duration: 2s;
+    transition-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    background-position: var(--x) var(--y);
+    z-index: -100;
+    background-image: url("./icons.svg");
+    background-repeat: repeat;
+  }
+  .skill-item {
+    font-size: 1.1em;
+    padding: 0.3em;
+    transition: transform 0.2s ease-out;
+  }
+
+  .skill-item:hover {
+    transform: scale(1.3, 1.3);
     cursor: default;
-}
-.skill-list{
-  margin-right:0;
-  padding:0;
-}
-
-.fill-width{
-  width:100%;
-  cursor:default;
+  }
 
 }
 
+.skills-header:hover {
+  cursor: default;
+}
+.skill-list {
+  margin-right: 0;
+  padding: 0;
+}
 
-.skills-content-wrapper{
-  height:100%;
+.fill-width {
+  width: 100%;
+  cursor: default;
+}
+
+.skills-content-wrapper {
+  height: 100%;
   padding-bottom: 15vh;
 }
 
-
-
-#skills-wrapper {
-  --x: 0px;
-  --y: 0px;
-  transition-duration: 2s;
-  transition-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
-  background-position: var(--x) var(--y);
-  z-index: -100;
-  background-image: url("./icons.svg");
-  background-repeat: repeat;
-}
-
-
-
 .skills-content {
-  color:var(--light);
-  padding-top:3em;
-  opacity:1;
+  color: var(--light);
+  padding-top: 3em;
+  opacity: 1;
 }
 
 #skills {
@@ -87,24 +114,12 @@
   border-radius: 0.5em;
 }
 
-
-.skill-item {
-  font-size:1.1em;
-  padding: 0.3em;
-  transition:transform 0.2s ease-out;
-}
-
-.skill-item:hover{
-  transform:scale(1.3, 1.3);
-  cursor:default;
-}
-
-.projects-btn{
-  margin-top:2em;
-  border-radius:0.4em;
+.projects-btn {
+  margin-top: 2em;
+  border-radius: 0.4em;
   border: 1px solid var(--accent-color-1);
   margin-left: 35%;
-  width:30%;
+  width: 30%;
   text-align: center;
   backdrop-filter: blur(10px);
 }
